--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     .made-by {
       position: absolute;
       top: 15px;
-      right: 65px; /* הזזתי קצת שמאלה כדי לפנות מקום לכפתור ⓘ */
+      right: 65px;
       font-size: 14px;
       opacity: 0.7;
       letter-spacing: 0.5px;
@@ -52,7 +52,7 @@
       text-shadow: 0 0 4px rgba(255,221,85,0.5);
     }
 
-    /* כפתור ⓘ Settings */
+    /* Settings Button */
     .settings-btn {
       position: absolute;
       top: 18px;
@@ -79,7 +79,7 @@
       box-shadow: 0 0 12px rgba(255,221,85,0.4);
     }
 
-    /* Settings Modal */
+    /* Modal Overlay */
     .modal-overlay {
       position: fixed;
       top: 0;
@@ -147,7 +147,6 @@
       color: #ffdd55;
     }
 
-    /* Style for credit inside modal */
     .modal-credit {
       margin-top: 25px;
       padding-top: 20px;
@@ -161,7 +160,6 @@
       color: #ffdd55;
     }
 
-    /* Editable Tier Labels Section */
     .edit-tier-section {
       margin-top: 30px;
     }
@@ -267,7 +265,6 @@
       text-transform: uppercase;
     }
 
-    /* צבעי Tier */
     .tier.SSS { background: linear-gradient(135deg, rgba(255,30,30,0.15), transparent); border: 2px solid rgba(255,215,0,0.3); }
     .tier.SS  { background: linear-gradient(135deg, rgba(255,140,0,0.1), transparent); border: 2px solid rgba(255,180,0,0.2); }
     .tier.S   { background: linear-gradient(135deg, rgba(255,220,0,0.08), transparent); border: 2px solid rgba(255,220,0,0.2); }
@@ -318,7 +315,6 @@
       backdrop-filter: blur(3px);
     }
 
-    /* שדה הזנת סרט */
     #movieInput {
       display: block;
       margin: 20px auto;
@@ -377,24 +373,46 @@
       background: rgba(100,50,50,0.9);
     }
 
-    /* ✅ תיקון כיוון טקסט ב-Settings (RTL) */
-    .modal p,
-    .modal h2,
-    .modal h3,
-    .modal-credit,
-    .edit-tier-section label {
-      direction: rtl;
-      text-align: right;
+    /* Mobile Tier Selector Popup */
+    .mobile-tier-popup {
+      position: fixed;
+      bottom: 20px;
+      left: 50%;
+      transform: translateX(-50%);
+      background: #222;
+      padding: 15px;
+      border-radius: 14px;
+      box-shadow: 0 6px 20px rgba(0,0,0,0.5);
+      z-index: 2000;
+      display: none;
+      flex-wrap: wrap;
+      gap: 10px;
+      justify-content: center;
+      max-width: 90%;
     }
 
-    .tier-edit-row {
-      flex-direction: row-reverse;
-      text-align: right;
+    .mobile-tier-btn {
+      padding: 10px 15px;
+      background: rgba(50,50,50,0.8);
+      border: 1px solid #444;
+      color: white;
+      border-radius: 8px;
+      cursor: pointer;
+      font-weight: bold;
+      transition: all 0.2s;
     }
 
-    .tier-edit-row input {
-      text-align: right;
+    .mobile-tier-btn:hover {
+      background: #ffdd55;
+      color: #000;
     }
+
+    .mobile-tier-btn.SSS { background: rgba(255,30,30,0.2); }
+    .mobile-tier-btn.SS  { background: rgba(255,140,0,0.2); }
+    .mobile-tier-btn.S   { background: rgba(255,220,0,0.2); }
+    .mobile-tier-btn.Ap  { background: rgba(100,255,100,0.2); }
+    .mobile-tier-btn.B   { background: rgba(150,200,255,0.2); }
+    .mobile-tier-btn.C   { background: rgba(200,50,50,0.2); }
   </style>
 </head>
 <body>
@@ -416,60 +434,258 @@
   <div id="unranked-label">🎬 Movies & Series</div>
   <div id="unranked-area"></div>
 
-  <!-- שדה לחיפוש סרט/סדרה -->
   <input type="text" id="movieInput" placeholder="🎬 Enter movie or series name and press Enter">
-
-  <!-- עדיין אפשר להעלות ידנית -->
   <input type="file" id="fileInput" multiple accept="image/*">
-
   <button id="downloadBtn" class="download-btn">💾 Save as Image</button>
   <button id="resetBtn" class="reset-btn">🔄 Reset All</button>
-  <button id="saveListBtn" class="download-btn" style="background: rgba(40,60,40,0.7); border-color: rgba(100,150,100,0.4);">💾 Save List</button>
 
   <!-- Settings Modal -->
   <div class="modal-overlay" id="settingsModal">
     <div class="modal">
-    <button class="close-modal" id="closeSettings">&times;</button>
-<h2>🛠 הגדרות ועזרה</h2>
+      <button class="close-modal" id="closeSettings">&times;</button>
+      <h2>🛠 הגדרות ועזרה</h2>
+      
+      <p dir="rtl" style="text-align: right;"><strong>איך משתמשים?</strong><br>
+         הקלד שם של סרט או סדרה בשדה למעלה ולחץ Enter.<br>
+         התמונה שתופיע תוכל לגרור ישירות ל-Tier המתאים בעזרת העכבר.<br>
+         אם אתה בטלפון — לחץ על התמונה והיא תאפשר לך לבחור Tier בקלות.</p>
 
-<p dir="rtl" style="text-align: right;"><strong>איך משתמשים?</strong><br>
-   הקלד שם של סרט או סדרה בשדה למעלה ולחץ Enter.<br>
-   התמונה שתופיע תוכל לגרור ישירות ל-Tier המתאים בעזרת העכבר.<br>
-   אם אתה בטלפון — לחץ על התמונה והיא תאפשר לך לבחור Tier בקלות.</p>
+      <p dir="rtl" style="text-align: right;"><strong>שמירה:</strong><br>
+         לחץ על "Save as Image" כדי לשמור את הדירוג כקובץ PNG.<br>
+         או השתמש ב-"Save List" כדי לשמור את הדירוג באתר ולהמשיך לדירוג הבא.</p>
 
-<p dir="rtl" style="text-align: right;"><strong>שמירה:</strong><br>
-   לחץ על "Save as Image" כדי לשמור את הדירוג כקובץ PNG.<br>
-   או השתמש ב-"Save List" כדי לשמור את הדירוג באתר ולהמשיך לדירוג הבא.</p>
+      <div class="edit-tier-section">
+        <h3 dir="rtl" style="text-align: right;">✏️ שנה את השמות של ה-Tiers (רק בשבילך)</h3>
+        <div class="tier-edit-row">
+          <span class="label-preview">SSS</span>
+          <input type="text" class="tier-input" data-target="SSS" placeholder="שם חדש ל-SSS" value="SSS">
+        </div>
+        <div class="tier-edit-row">
+          <span class="label-preview">SS</span>
+          <input type="text" class="tier-input" data-target="SS" placeholder="שם חדש ל-SS" value="SS">
+        </div>
+        <div class="tier-edit-row">
+          <span class="label-preview">S</span>
+          <input type="text" class="tier-input" data-target="S" placeholder="שם חדש ל-S" value="S">
+        </div>
+        <div class="tier-edit-row">
+          <span class="label-preview">A+</span>
+          <input type="text" class="tier-input" data-target="A+" placeholder="שם חדש ל-A+" value="A+">
+        </div>
+        <div class="tier-edit-row">
+          <span class="label-preview">B</span>
+          <input type="text" class="tier-input" data-target="B" placeholder="שם חדש ל-B" value="B">
+        </div>
+        <div class="tier-edit-row">
+          <span class="label-preview">C</span>
+          <input type="text" class="tier-input" data-target="C" placeholder="שם חדש ל-C" value="C">
+        </div>
+      </div>
 
-<div class="edit-tier-section">
-  <h3 dir="rtl" style="text-align: right;">✏️ שנה את השמות של ה-Tiers (רק בשבילך)</h3>
-  <div class="tier-edit-row">
-    <span class="label-preview">SSS</span>
-    <input type="text" class="tier-input" data-target="SSS" placeholder="שם חדש ל-SSS" value="SSS">
+      <div class="modal-credit">
+        נוצר באהבה ע"י <strong>TaL.S</strong><br>
+        תודה שבחרת להשתמש באתר!
+      </div>
+    </div>
   </div>
-  <div class="tier-edit-row">
-    <span class="label-preview">SS</span>
-    <input type="text" class="tier-input" data-target="SS" placeholder="שם חדש ל-SS" value="SS">
-  </div>
-  <div class="tier-edit-row">
-    <span class="label-preview">S</span>
-    <input type="text" class="tier-input" data-target="S" placeholder="שם חדש ל-S" value="S">
-  </div>
-  <div class="tier-edit-row">
-    <span class="label-preview">A+</span>
-    <input type="text" class="tier-input" data-target="A+" placeholder="שם חדש ל-A+" value="A+">
-  </div>
-  <div class="tier-edit-row">
-    <span class="label-preview">B</span>
-    <input type="text" class="tier-input" data-target="B" placeholder="שם חדש ל-B" value="B">
-  </div>
-  <div class="tier-edit-row">
-    <span class="label-preview">C</span>
-    <input type="text" class="tier-input" data-target="C" placeholder="שם חדש ל-C" value="C">
-  </div>
-</div>
 
-<div class="modal-credit">
-  נוצר באהבה ע"י <strong>TaL.S</strong><br>
-  תודה שבחרת להשתמש באתר!
-</div>
+  <!-- Mobile Tier Selector -->
+  <div class="mobile-tier-popup" id="mobileTierPopup">
+    <div class="mobile-tier-btn SSS" data-tier="SSS">SSS</div>
+    <div class="mobile-tier-btn SS" data-tier="SS">SS</div>
+    <div class="mobile-tier-btn S" data-tier="S">S</div>
+    <div class="mobile-tier-btn Ap" data-tier="A+">A+</div>
+    <div class="mobile-tier-btn B" data-tier="B">B</div>
+    <div class="mobile-tier-btn C" data-tier="C">C</div>
+    <div class="mobile-tier-btn" id="cancelMobileSelect" style="background:#555;">ביטול</div>
+  </div>
+
+  <script>
+    const fileInput = document.getElementById('fileInput');
+    const movieInput = document.getElementById('movieInput');
+    const unranked = document.getElementById('unranked-area');
+    const tiers = document.querySelectorAll('.tier');
+    const OMDB_API_KEY = "ee77ebb9";
+
+    // Check if device is mobile
+    function isMobile() {
+      return /Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent);
+    }
+
+    // Poster click for mobile
+    function initMobilePosterClick() {
+      if (!isMobile()) return;
+
+      document.addEventListener('click', function(e) {
+        if (e.target.classList.contains('poster')) {
+          currentSelectedPoster = e.target;
+          const popup = document.getElementById('mobileTierPopup');
+          popup.style.display = 'flex';
+        }
+      });
+
+      const popupButtons = document.querySelectorAll('.mobile-tier-btn');
+      popupButtons.forEach(btn => {
+        if (btn.id === 'cancelMobileSelect') {
+          btn.addEventListener('click', () => {
+            document.getElementById('mobileTierPopup').style.display = 'none';
+          });
+        } else {
+          btn.addEventListener('click', () => {
+            const tierName = btn.dataset.tier;
+            const targetTier = document.querySelector(`.tier[data-tier="${tierName}"]`);
+            if (currentSelectedPoster && targetTier) {
+              targetTier.appendChild(currentSelectedPoster);
+              document.getElementById('mobileTierPopup').style.display = 'none';
+            }
+          });
+        }
+      });
+    }
+
+    let currentSelectedPoster = null;
+
+    movieInput.addEventListener('keypress', async (e) => {
+      if (e.key === 'Enter') {
+        const movieName = e.target.value.trim();
+        if (!movieName) return;
+
+        try {
+          const response = await fetch(`https://www.omdbapi.com/?t=${encodeURIComponent(movieName)}&apikey=${OMDB_API_KEY}`);
+          const data = await response.json();
+
+          if (data.Response === "False") {
+            alert("לא מצאתי את הסרט/סדרה הזה 😕\nנסה שם אחר או באנגלית.");
+            return;
+          }
+
+          if (!data.Poster || data.Poster === "N/A") {
+            alert("לסרט הזה אין פוסטר זמין כרגע 🖼️");
+            return;
+          }
+
+          const img = document.createElement('img');
+          img.src = data.Poster;
+          img.alt = data.Title;
+          img.title = `${data.Title} (${data.Year}) • ${data.Type}`;
+          img.classList.add('poster');
+          img.draggable = true;
+          img.dataset.movieTitle = data.Title;
+          img.addEventListener('dragstart', dragStart);
+
+          img.onload = () => {
+            unranked.appendChild(img);
+            movieInput.value = '';
+            movieInput.placeholder = "🎬 Try another one...";
+          };
+
+          img.onerror = () => {
+            alert("שגיאה בטעינת התמונה. תנסה שוב?");
+          };
+
+        } catch (error) {
+          alert("אירעה שגיאה. יש אינטרנט?");
+          console.error(error);
+        }
+      }
+    });
+
+    fileInput.addEventListener('change', (event) => {
+      const files = event.target.files;
+      for (const file of files) {
+        if (!file.type.startsWith('image/')) continue;
+        const reader = new FileReader();
+        reader.onload = (e) => {
+          const img = document.createElement('img');
+          img.src = e.target.result;
+          img.classList.add('poster');
+          img.draggable = true;
+          img.dataset.originalSrc = e.target.result;
+          img.addEventListener('dragstart', dragStart);
+          unranked.appendChild(img);
+        };
+        reader.readAsDataURL(file);
+      }
+    });
+
+    function dragStart(e) {
+      e.dataTransfer.setData('text/plain', e.target.src);
+    }
+
+    tiers.forEach(tier => {
+      tier.addEventListener('dragover', (e) => e.preventDefault());
+      tier.addEventListener('drop', (e) => {
+        e.preventDefault();
+        const src = e.dataTransfer.getData('text/plain');
+        const img = document.querySelector(`img[src='${src}']`);
+        if (img) tier.appendChild(img);
+      });
+    });
+
+    unranked.addEventListener('dragover', (e) => e.preventDefault());
+    unranked.addEventListener('drop', (e) => {
+      e.preventDefault();
+      const src = e.dataTransfer.getData('text/plain');
+      const img = document.querySelector(`img[src='${src}']`);
+      if (img) unranked.appendChild(img);
+    });
+
+    document.getElementById('resetBtn').addEventListener('click', () => {
+      const allPosters = document.querySelectorAll('.poster');
+      allPosters.forEach(poster => unranked.appendChild(poster));
+    });
+
+    document.getElementById('downloadBtn').addEventListener('click', () => {
+      const script = document.createElement('script');
+      script.src = 'https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js';
+      script.onload = () => {
+        const element = document.querySelector('.tier-list').parentNode;
+        html2canvas(element, {
+          backgroundColor: '#0a0a0a',
+          scale: 2,
+          useCORS: true,
+          allowTaint: true
+        }).then(canvas => {
+          const link = document.createElement('a');
+          link.download = 'my-movie-tierlist.png';
+          link.href = canvas.toDataURL('image/png');
+          link.click();
+        });
+      };
+      document.head.appendChild(script);
+    });
+
+    const settingsBtn = document.getElementById('settingsBtn');
+    const closeSettings = document.getElementById('closeSettings');
+    const modalOverlay = document.getElementById('settingsModal');
+    const tierInputs = document.querySelectorAll('.tier-input');
+
+    settingsBtn.addEventListener('click', () => {
+      modalOverlay.classList.add('active');
+    });
+
+    closeSettings.addEventListener('click', () => {
+      modalOverlay.classList.remove('active');
+    });
+
+    modalOverlay.addEventListener('click', (e) => {
+      if (e.target === modalOverlay) {
+        modalOverlay.classList.remove('active');
+      }
+    });
+
+    tierInputs.forEach(input => {
+      input.addEventListener('input', function() {
+        const targetTier = this.dataset.target;
+        const labelElement = document.querySelector(`.tier[data-tier="${targetTier}"] .tier-label`);
+        if (labelElement) {
+          labelElement.textContent = this.value;
+        }
+      });
+    });
+
+    // Initialize mobile features
+    initMobilePosterClick();
+  </script>
+</body>
+</html>
